# ygtb

./: .gitignore  AGENTS.md  IFLOW.md  QWEN.md  README.md  ai-spider.py  article_style_analyzer.py  batch_scrape_toutiao.ps1  feishu-export.py  financial_analysis.py  job_application.py  list_subfolders.py  main.py  pyproject.toml  removeaudio.py  stock_analysis.py  stock_recommadation.py  temp_input.txt  test_article.txt  utils.py
.torextrader/: scrape_toutiao_config.json  scrape_zhangyue_config.json
_refs/: backtesting-multiprocess.py  backtesting-validation.py  bokeh_candlestick.html  bokeh_candlestick.py  bokeh_standalone_app_server.py  bokeh_standalone_embed_server.py  bokeh_streaming_server.py  bokeh_tabs.py  bokeh_test_stream.py  dash-ui.py  dash-websocket-backend.py  dash-websocket-frontend.py  market_profile.py  plotly-trace-ui.py
data/: Stocks-data - AT&T.csv  Stocks-data - Alphabet.csv  Stocks-data - Intel.csv  _articles.json  articles.json  rewrite_history.json
scrape/: appium_book.py  appium_toutiaoapp.py  bs_learn.py  download_shuqi.py  download_zhangyue.py  get_wechart_article_list.py  merge_txts.py  pdf2txt.py  web_captcha.py  web_toutiao.py  whisper.py
skills/article-rewriter/: SKILL.md
skills/article-rewriter/scripts/: rewrite_article.py
skills/style-generator/: SKILL.md
skills/style-generator/scripts/: generate_style.py
