[project]
name = "ygtb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "bs4>=0.0.2",
    "commentjson>=0.9.0",
    "crewai[tools]>=1.7.1",
    "langchain-community>=0.3.5",
    "langchain-openai>=0.3.23",
    "langchain-ollama>=0.3.0",
    "moviepy==1.0.3",
    "orjson>=3.11.4",
    "selenium>=4.38.0",
    "termcolor>=3.2.0",
    "webdriver-manager>=4.0.2",
    "bokeh>=2.4.2",
    "matplotlib>=3.10.7",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "bokeh-sampledata>=2025.0",
    "ddgs>=9.10.0",
    "polygon-api-client>=1.16.3",
]

[tool.ruff]
# lint.extend-select = []
# lint.ignore = ["F401"]